{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 148,
  "lineage": "7d07115b-f4c0-3492-ce25-de564f5645e7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "web_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 2
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/backendAddressPools/backend",
                "ip_addresses": [],
                "name": "backend"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/backendHttpSettingsCollection/settings-80",
                "name": "settings-80",
                "path": "/",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/backendHttpSettingsCollection/settings-443",
                "name": "settings-443",
                "path": "/",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/probes/probe-443",
                "probe_name": "probe-443",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "firewall_policy_id": null,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendIPConfigurations/public-ip",
                "name": "public-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/smlee-appgw-pubip",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendIPConfigurations/private",
                "name": "private",
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-appgw-subnet"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendPorts/frontend-443",
                "name": "frontend-443",
                "port": 443
              },
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendPorts/frontend-80",
                "name": "frontend-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/gatewayIPConfigurations/appgw-conf",
                "name": "appgw-conf",
                "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-appgw-subnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendIPConfigurations/public-ip",
                "frontend_ip_configuration_name": "public-ip",
                "frontend_port_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendPorts/frontend-80",
                "frontend_port_name": "frontend-80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/httpListeners/listener-80",
                "name": "listener-80",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendIPConfigurations/public-ip",
                "frontend_ip_configuration_name": "public-ip",
                "frontend_port_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/frontendPorts/frontend-443",
                "frontend_port_name": "frontend-443",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/httpListeners/listener-443",
                "name": "listener-443",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/sslCertificates/cert",
                "ssl_certificate_name": "cert",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw",
            "identity": [],
            "location": "koreacentral",
            "name": "smlee-web-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/probes/probe-443",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": []
                  }
                ],
                "minimum_servers": 0,
                "name": "probe-443",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/redirectConfigurations/redirect",
                "include_path": true,
                "include_query_string": true,
                "name": "redirect",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/httpListeners/listener-443",
                "target_listener_name": "listener-443",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/httpListeners/listener-80",
                "http_listener_name": "listener-80",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/requestRoutingRules/rule-80",
                "name": "rule-80",
                "priority": 0,
                "redirect_configuration_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/redirectConfigurations/redirect",
                "redirect_configuration_name": "redirect",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/backendAddressPools/backend",
                "backend_address_pool_name": "backend",
                "backend_http_settings_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/backendHttpSettingsCollection/settings-80",
                "backend_http_settings_name": "settings-80",
                "http_listener_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/httpListeners/listener-443",
                "http_listener_name": "listener-443",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/requestRoutingRules/rule-443",
                "name": "rule-443",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "smlee-3tier",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIITuQIBAzCCE38GCSqGSIb3DQEHAaCCE3AEghNsMIITaDCCDh8GCSqGSIb3DQEHBqCCDhAwgg4MAgEAMIIOBQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQIZPxVqzB/7VMCAggAgIIN2NFfX7BNs5rz8MHQtSsiLiPDzDJyheUn4I2gJtnWDXYfgMLr3n6Hb0HR+fxdYDPxZ+a+NYl3hg+6i3/uftW/RTdNH5G7W6t2juQp74vm0gg//SkI5ibXXJDdG5BRB8/E3590vrvVyycVSE9nBNrc5EiXWC2/rPOO0e47rIC+nwiQY0s21Oo0OTkHdMPgWQ9uqmANFo/TbscV5YnmVDeV8seaNIYC0W53q30mVT8s5NvQU8gcESYuQML15SyE/+JFRi4gIpW5JTiZ2nn2t4n84hX/W6NF9mwPTul70qXVAWgMfJQ0rwIdPo2pv486EuyrejEU6VZQ3Vs [...]
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/applicationGateways/smlee-web-appgw/sslCertificates/cert",
                "key_vault_secret_id": "",
                "name": "cert",
                "password": "1234",
                "public_cert_data": "MIINeAYJKoZIhvcNAQcCoIINaTCCDWUCAQExADALBgkqhkiG9w0BBwGggg1NMIIGcDCCBFigAwIBAgIQOleh5GuAFHnVJASEklJF/zANBgkqhkiG9w0BAQwFADBLMQswCQYDVQQGEwJBVDEQMA4GA1UEChMHWmVyb1NTTDEqMCgGA1UEAxMhWmVyb1NTTCBSU0EgRG9tYWluIFNlY3VyZSBTaXRlIENBMB4XDTIxMTIyMjAwMDAwMFoXDTIyMDMyMjIzNTk1OVowHDEaMBgGA1UEAxMRbGFiLmF6dXJlMXRlYW0uY2YwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCUZFpazaT8EwJDAjtvgR6Aty0n2B2Say3DT2extgCXn7IO3gACZbHL6BOFZeHUM7ZfTY688tzG7WVd3VravCG3LqRadoGwDO1NVWr8lD/lJefnPXd [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.appgw_pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appgw_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "smlee_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "Zone-Redundant",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/frontendIPConfigurations/wasPrivateIP",
                "load_balancer_rules": [
                  "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/loadBalancingRules/AJP"
                ],
                "name": "wasPrivateIP",
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-lb-subnet"
              }
            ],
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb",
            "location": "koreacentral",
            "name": "smlee-lb",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "smlee-3tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.lb_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_bp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/1/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/2/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/3/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/4/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/5/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/6/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/7/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/10/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/8/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachineScaleSets/smlee-was-vmss/virtualMachines/9/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration"
            ],
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/backendAddressPools/smlee-lb-bp",
            "load_balancing_rules": [
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/loadBalancingRules/AJP"
            ],
            "loadbalancer_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb",
            "name": "smlee-lb-bp",
            "resource_group_name": "smlee-3tier"
          },
          "dependencies": [
            "azurerm_lb.smlee_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.lb_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/probes/smlee-lb-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/loadBalancingRules/AJP"
            ],
            "loadbalancer_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb",
            "name": "smlee-lb-probe",
            "number_of_probes": 2,
            "port": 8009,
            "protocol": "Tcp",
            "resource_group_name": "smlee-3tier"
          },
          "dependencies": [
            "azurerm_lb.smlee_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.lb_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ityun_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/backendAddressPools/smlee-lb-bp",
            "backend_address_pool_ids": [
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/backendAddressPools/smlee-lb-bp"
            ],
            "backend_port": 8009,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/frontendIPConfigurations/wasPrivateIP",
            "frontend_ip_configuration_name": "wasPrivateIP",
            "frontend_port": 8009,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/loadBalancingRules/AJP",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb",
            "name": "AJP",
            "probe_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/loadBalancers/smlee-lb/probes/smlee-lb-probe",
            "protocol": "Tcp",
            "resource_group_name": "smlee-3tier"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.lb_bp",
            "azurerm_lb_probe.lb_probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.lb_subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_lb.smlee_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/natGateways/smlee-natgw",
            "idle_timeout_in_minutes": 10,
            "location": "koreacentral",
            "name": "smlee-natgw",
            "public_ip_address_ids": [
              "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/ismlee-natgw_pubip"
            ],
            "resource_group_name": "smlee-3tier",
            "resource_guid": "b351f869-4f07-4734-9b94-035e9e1c964b",
            "sku_name": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "natgw_pubip_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/natGateways/smlee-natgw|/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/ismlee-natgw_pubip",
            "nat_gateway_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/natGateways/smlee-natgw",
            "public_ip_address_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/ismlee-natgw_pubip"
          },
          "dependencies": [
            "azurerm_public_ip.natgw_pubip",
            "azurerm_resource_group.rg",
            "azurerm_nat_gateway.natgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkInterfaces/smlee-jumpbox-nic",
            "internal_domain_name_suffix": "mcpttgfhuuouzncutpchlqeuhg.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "smlee-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/smlee-jumpbox-pubip",
                "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-jumpbox-subnet"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-0F-09-3A",
            "name": "smlee-jumpbox-nic",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "smlee-3tier",
            "virtual_machine_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Compute/virtualMachines/smlee-jumpbox"
          },
          "dependencies": [
            "azurerm_public_ip.jumpbox_pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jumpbox_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jumpbox_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkInterfaces/smlee-jumpbox-nic|/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-jumpbox-nsg",
            "network_interface_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkInterfaces/smlee-jumpbox-nic",
            "network_security_group_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-jumpbox-nsg"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_network_interface.jumpbox_nic",
            "azurerm_network_security_group.jumpbox_nsg",
            "azurerm_public_ip.jumpbox_pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.jumpbox_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-jumpbox-nsg",
            "location": "koreacentral",
            "name": "smlee-jumpbox-nsg",
            "resource_group_name": "smlee-3tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "was_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-was-nsg",
            "location": "koreacentral",
            "name": "smlee-was-nsg",
            "resource_group_name": "smlee-3tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8009",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Ajp",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-web-nsg",
            "location": "koreacentral",
            "name": "smlee-web-nsg",
            "resource_group_name": "smlee-3tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/smlee-appgw-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.200.243.48",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "smlee-appgw-pubip",
            "resource_group_name": "smlee-3tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumpbox_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/smlee-jumpbox-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.200.243.3",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "smlee-jumpbox-pubip",
            "resource_group_name": "smlee-3tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "natgw_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "1",
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/publicIPAddresses/ismlee-natgw_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.82.156.154",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "ismlee-natgw_pubip",
            "resource_group_name": "smlee-3tier",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/28",
            "address_prefixes": [
              "10.0.1.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-appgw-subnet",
            "name": "smlee-appgw-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/29",
            "address_prefixes": [
              "10.0.3.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-db-subnet",
            "name": "smlee-db-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/29",
            "address_prefixes": [
              "10.0.4.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-jumpbox-subnet",
            "name": "smlee-jumpbox-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/29",
            "address_prefixes": [
              "10.0.2.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-lb-subnet",
            "name": "smlee-lb-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "was_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.20.0/28",
            "address_prefixes": [
              "10.0.20.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet",
            "name": "smlee-was-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.10.0/28",
            "address_prefixes": [
              "10.0.10.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-web-subnet",
            "name": "smlee-web-subnet",
            "resource_group_name": "smlee-3tier",
            "virtual_network_name": "smlee-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "natgw_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet",
            "nat_gateway_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/natGateways/smlee-natgw",
            "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.natgw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.was_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "was_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet",
            "network_security_group_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-was-nsg",
            "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.was_subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_network_security_group.was_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-web-subnet",
            "network_security_group_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-web-nsg",
            "subnet_id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "98399f60-a5a7-4c1d-b454-9bc475c0943e",
            "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet",
            "location": "koreacentral",
            "name": "smlee-vnet",
            "resource_group_name": "smlee-3tier",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/28",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-appgw-subnet",
                "name": "smlee-appgw-subnet"
              },
              {
                "address_prefix": "10.0.10.0/28",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-web-subnet",
                "name": "smlee-web-subnet",
                "security_group": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-web-nsg"
              },
              {
                "address_prefix": "10.0.2.0/29",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-lb-subnet",
                "name": "smlee-lb-subnet"
              },
              {
                "address_prefix": "10.0.20.0/28",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-was-subnet",
                "name": "smlee-was-subnet",
                "security_group": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/networkSecurityGroups/smlee-was-nsg"
              },
              {
                "address_prefix": "10.0.3.0/29",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-db-subnet",
                "name": "smlee-db-subnet"
              },
              {
                "address_prefix": "10.0.4.0/29",
                "id": "/subscriptions/39438a80-f276-4b26-9c26-bd48ff8bc49c/resourceGroups/smlee-3tier/providers/Microsoft.Network/virtualNetworks/smlee-vnet/subnets/smlee-jumpbox-subnet",
                "name": "smlee-jumpbox-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}